# projet_m1_fakenews

./: Dockerfile  app.py  docker-compose.yaml  docker_requirements.txt  requirements.txt
airflow/: wine.data
airflow/dags/: app_dag.py  kedro_clean_base_dag.py  ml_retrain.py
bluesky_ml/: predict.py
import_data/: app.py  functions.py  getItems.py  token.json
kedro-clean/: README.md  pyproject.toml
kedro-clean/conf/base/: catalog.yml  credentials.yml  parameters.yml
kedro-clean/data/06_models/: kmeans.pkl  vectorizer.pkl
kedro-clean/src/kedro_clean/: __init__.py  __main__.py  pipeline_registry.py  settings.py
kedro-clean/src/kedro_clean/extras/datasets/: mongo_dataset.py
kedro-clean/src/kedro_clean/pipelines/: nodes.py  nodes_ml.py  pipeline.py  pipeline_ml.py
